css/styles.css
@font-face {
  font-family: 'League Spartan';
  src: url('./../assets/fonts/LeagueSpartan.woff2') format('woff2');
  font-display: swap;
  font-style: normal;
  font-weight: 100 900;
}

/*  */

:root {
  --white: hsl(0, 100%, 100%);
  --purple-900: hsl(300, 43%, 22%);
  --purple-300: hsl(303, 10%, 53%);
  --purple-100: hsl(300, 24%, 96%);
  --pink: hsl(333, 80%, 67%);
  --ff-base: 'League Spartan', sans-serif;
  --radius: 8px;
}

/*  */

.visually-hidden {
  position: absolute;
  inline-size: 1px;
  block-size: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0 0 0 0);
  white-space: nowrap;
  border: 0;
}

/*  */

.page {
  min-block-size: 100dvh;
  display: grid;
  grid-template-rows: 1fr auto;
  justify-content: center;
  font-family: var(--ff-base);
  background: url('./../assets/images/bg-pattern-top-mobile.svg') no-repeat top left, url('./../assets/images/bg-pattern-bottom-mobile.svg') no-repeat bottom right var(--white);
}

/*  */

.social-proof {
  inline-size: 100vw;
  max-inline-size: 20.4375rem;
  padding-top: 5.2rem;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
    "intro"
    "ratings"
    "testimonials";
}

/*  */

.social-proof__intro {
  grid-area: intro;
  text-align: center;
}

.social-proof__title {
  max-inline-size: 15ch;
  margin-inline: auto;
  font-size: clamp(2.5rem, 1.7rem + 3.41vw, 3.5rem);
  font-weight: 700;
  letter-spacing: -2.05px;
  line-height: 0.85;
  color: var(--purple-900);
}

.social-proof__description {
  margin-top: 1.65rem;
  font-size: 1.1875rem;
  font-weight: 500;
  letter-spacing: -.64px;
  line-height: 1.32;
  color: var(--purple-300);
}


/*  */

.social-proof__ratings {
  grid-area: ratings;
  margin-top: 2.45rem;
  display: grid;
  row-gap: 1rem;
  align-content: start;
}

.rating {
  padding-block: 1rem;
  text-align: center;
  background-color: var(--purple-100);
  color: var(--purple-900);
  border-radius: var(--radius);
}

.rating__stars {
  display: flex;
  justify-content: center;
  column-gap: .5rem;
}

.rating__text {
  margin-top: .9rem;
  display: inline-block;
  font-size: 17px;
  font-weight: 700;
  line-height: 1;
  color: var(--purple-900);
}

/*  */

.social-proof__testimonials {
  grid-area: testimonials;
  margin-top: 2.8rem;
  display: flex;
  flex-wrap: wrap;
  align-items: start;
  gap: 1.5rem;
}

.testimonial {
  padding: 2.5rem 2rem 2.4rem;
  font-size: 1.0625rem;
  background-color: var(--purple-900);
  color: var(--white);
  border-radius: var(--radius);
}

.testimonial__header {
  display: grid;
  grid-template-columns: auto 1fr;
  grid-template-areas:
    "photo name"
    "photo status";
  column-gap: 1.5rem;
  align-items: end;
}

.testimonial__photo {
  grid-area: photo;
  inline-size: 2.5rem;
  block-size: 2.5rem;
  border-radius: 50%;
}

.testimonial__name {
  grid-area: name;
  margin-top: -0.05rem;
  font-size: inherit;
  font-weight: 700;
}

.testimonial__status {
  grid-area: status;
  display: inline-block;
  font-weight: 400;
  color: var(--pink);
}

.testimonial__quote {
  margin-top: 1.7rem;
  font-weight: 500;
  letter-spacing: -.3px;
  line-height: 1.3;

  &::before {
    content: '\201c';
  }

  &::after {
    content: '\201d';
  }
}

.footer {
  padding: 3rem 0 1rem;
  font-weight: 500;
  text-align: center;
  color: var(--purple-900);
}

.footer__link {
  margin-inline: .25rem;
  position: relative;

  &::after {
    content: '';
    position: absolute;
    bottom: -2px;
    right: 0;
    inline-size: 100%;
    block-size: 1.8px;
    background-color: currentColor;
    transition: inline-size .25s ease-in-out;
  }
}

.footer__link:focus-visible {
  outline: 2px dotted currentColor;
  outline-offset: 2px;
}

.footer__link:focus-visible::after,
.footer__link:hover::after {
  inline-size: 0;
}



/*  */

@media (width >=47.75rem) {
  .social-proof {
    max-inline-size: 28.3125rem;
  }


  .social-proof__ratings {
    margin-top: 1.65rem;
  }

  .rating {
    inline-size: 27.8rem;
    block-size: 3.5rem;
    padding-left: 1.98rem;
    display: flex;
    align-items: center;
    gap: 2rem;
  }

  .rating__text {
    margin-top: unset;
  }
}


@media (width >=75rem) {
  .page {
    background-image: url('./../assets/images/bg-pattern-top-desktop.svg'), url('./../assets/images/bg-pattern-bottom-desktop.svg');
  }

  .social-proof {
    max-inline-size: 69.375rem;
    padding-top: 7.4rem;
    grid-template-columns: repeat(2, 1fr);
    grid-template-areas:
      "intro ratings"
      "testimonials testimonials";
  }

  .social-proof__intro {
    text-align: left;
    max-inline-size: 45ch;
  }

  .social-proof__title {
    margin-inline: unset;
  }

  .social-proof__testimonials {
    margin-top: 2.1rem;
    justify-content: space-between;
  }

  .rating,
  .testimonial {
    transition: transform .2s ease-in-out;
  }

  .rating:nth-of-type(1) {
    transform: translateX(.95rem);
  }

  .rating:nth-of-type(2) {
    transform: translateX(3.9rem);
  }

  .rating:nth-of-type(3) {
    transform: translateX(6.9rem);
  }

  .testimonial {
    max-inline-size: 21.875rem;
  }

  .testimonial:nth-of-type(1) {
    transform: translateY(.55rem);
  }

  .testimonial:nth-of-type(2) {
    transform: translateY(1.55rem);
  }

  .testimonial:nth-of-type(3) {
    transform: translateY(2.55rem);
  }
}

@media (width >=90rem) {
  .social-proof__testimonials {
    margin-top: unset;
  }
}

